restructured and added Changelog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,36 @@
 
-add_library(usbpp11 usb/usb.cpp)
+cmake_minimum_required(VERSION 3.1.0)
 
-target_include_directories(usbpp11
-	PUBLIC
-		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-		$<INSTALL_INTERFACE:include>
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/usb
-)
+project(libusbpp11 VERSION 0.0.1)
 
-target_link_libraries(usbpp11 PRIVATE CONAN_PKG::libusb)
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup(TARGETS)
 
-install(TARGETS usbpp11
-		EXPORT usbpp11
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION bin
-		ARCHIVE DESTINATION lib
-)
+add_subdirectory(examples)
+add_subdirectory(doc)
+add_subdirectory(src)
 
-file(GLOB HEADERS "*.h")
-install(FILES ${HEADERS} DESTINATION include)
+install(EXPORT libusbpp11 DESTINATION cmake)
+
+if (UNIX)
+	set(CMAKE_INSTALL_PREFIX "/usr/local")
+endif()
+
+set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+set(CPACK_PACKAGE_VENDOR "Pavol Kurina")
+set(CPACK_PACKAGE_CONTACT "Pavol Kurina <pavol.kurina@gmail.com>")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "The ${PROJECT_NAME} package.")
+
+if (UNIX)
+	execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE CPACK_PACKAGE_ARCHITECTURE)
+	string(STRIP "${CPACK_PACKAGE_ARCHITECTURE}" CPACK_PACKAGE_ARCHITECTURE)
+	set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "${CPACK_PACKAGE_ARCHITECTURE}")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "")
+    set(CPACK_GENERATOR "DEB")
+    set(CPACK_SOURCE_GENERATOR "DEB")
+else()
+	set(CPACK_GENERATOR "ZIP") 
+endif()
+
+include(CPack)
