fixed libusb dependency from PRIVATE to PUBLIC

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,11 +5,11 @@ target_include_directories(usbpp11
 	PUBLIC
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 		$<INSTALL_INTERFACE:include>
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/usb
+	PRIVATE
+        	${CMAKE_CURRENT_SOURCE_DIR}/usb
 )
 
-target_link_libraries(usbpp11 PRIVATE CONAN_PKG::libusb)
+target_link_libraries(usbpp11 PUBLIC CONAN_PKG::libusb)
 
 install(TARGETS usbpp11
 		EXPORT libusbpp11
