--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,25 @@ project(libusbpp11 VERSION 0.0.1)
 
 set (CMAKE_CXX_STANDARD 11)
 
-include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-conan_basic_setup(TARGETS)
+if (NOT CONAN_DEPENDENCIES)
+    include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+    conan_basic_setup(TARGETS)
+endif ()
+
+set(CMAKE_INSTALL_BINDIR bin)
+set(CMAKE_INSTALL_LIBDIR lib)
+set(CMAKE_INSTALL_INCLUDEDIR include)
+if (WIN32)
+	set(CMAKE_INSTALL_DATADIR data)
+	set(CMAKE_INSTALL_DOCDIR doc/${PROJECT_NAME}-${PROJECT_VERSION})
+else ()
+	set(CMAKE_INSTALL_DATADIR share/${PROJECT_NAME}-${PROJECT_VERSION})
+	set(CMAKE_INSTALL_DOCDIR share/doc/${PROJECT_NAME}-${PROJECT_VERSION})
+endif()
 
 add_subdirectory(examples)
 add_subdirectory(doc)
 add_subdirectory(src)
 
-install(EXPORT libusbpp11 DESTINATION cmake)
-install(FILES Readme.md ChangeLog.md LICENSE DESTINATION share/doc/${PROJECT_NAME}-${PROJECT_VERSION})
+install(EXPORT libusbpp11 DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake)
+install(FILES Readme.md ChangeLog.md LICENSE DESTINATION ${CMAKE_INSTALL_DOCDIR})
