improved installation layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,13 @@ if (NOT CONAN_DEPENDENCIES)
 endif ()
 
 set(CMAKE_INSTALL_BINDIR bin)
-set(CMAKE_INSTALL_LIBDIR lib)
 set(CMAKE_INSTALL_INCLUDEDIR include)
 if (WIN32)
+	set(CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_BINDIR})
 	set(CMAKE_INSTALL_DATADIR data)
 	set(CMAKE_INSTALL_DOCDIR doc/${PROJECT_NAME}-${PROJECT_VERSION})
 else ()
+	set(CMAKE_INSTALL_LIBDIR lib)
 	set(CMAKE_INSTALL_DATADIR share/${PROJECT_NAME}-${PROJECT_VERSION})
 	set(CMAKE_INSTALL_DOCDIR share/doc/${PROJECT_NAME}-${PROJECT_VERSION})
 endif()
