--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,10 +12,10 @@ target_include_directories(usbpp11
 target_link_libraries(usbpp11 PUBLIC CONAN_PKG::libusb)
 
 install(TARGETS usbpp11
-		EXPORT libusbpp11
-        RUNTIME DESTINATION bin
-        LIBRARY DESTINATION bin
-		ARCHIVE DESTINATION lib
+	EXPORT libusbpp11
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
 file(GLOB HEADERS "*.h")
