--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,14 +17,15 @@ set(CMAKE_INSTALL_LIBDIR lib)
 set(CMAKE_INSTALL_INCLUDEDIR include)
 if (WIN32)
 	set(CMAKE_INSTALL_DATADIR data)
-	set(CMAKE_INSTALL_DOCDIR doc)
+	set(CMAKE_INSTALL_DOCDIR doc/${PROJECT_NAME}-${PROJECT_VERSION})
 else ()
 	set(CMAKE_INSTALL_DATADIR share/${PROJECT_NAME}-${PROJECT_VERSION})
 	set(CMAKE_INSTALL_DOCDIR share/doc/${PROJECT_NAME}-${PROJECT_VERSION})
 endif()
 
-add_subdirectory(examples)
 add_subdirectory(doc)
+add_subdirectory(examples)
+add_subdirectory(include)
 add_subdirectory(src)
 
 install(EXPORT libusbpp11 
