--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,2 +1,2 @@
 
-install(DIRECTORIES ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
+install(DIRECTORY libusbpp11 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
