removed traces of conan-1.x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,7 @@ set (CMAKE_CXX_STANDARD 11)
 set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Set debug library postfix" FORCE)
 
 if (WIN32)
-	# if included from a parent project, this will fail...
-	if (NOT CONAN_DEPENDENCIES)
-		include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
-		conan_basic_setup(TARGETS)
-	endif ()
+	find_package(libusb)
 else ()
 	find_package(PkgConfig REQUIRED)
 	pkg_check_modules(libusb REQUIRED libusb-1.0)
